--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "CS4530 Base Project",
   "type": "module",
   "scripts": {
-    "check": "tsc --noEmit",
+    "check": "tsc",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
+    "prettier:fix": "prettier --write .",
     "test": "vitest run --coverage"
   },
   "author": "Mitch Wand and Rob Simmons",
