--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
-    "test": "vitest run --coverage"
+    "test": "vitest run --coverage",
+    "dev": "node --watch ./src/server.ts",
+    "build": "echo 'nothing to do to build, run `npm start`'",
+    "start": "MODE=production node ./src/server.ts"
   },
   "author": "Rob Simmons",
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@types/express": "^5.0.6",
+    "@types/supertest": "^6.0.3",
     "@vitest/coverage-istanbul": "^4.0.17",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
@@ -24,8 +28,13 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.26",
     "prettier": "^3.7.4",
+    "supertest": "^7.2.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.50.0",
     "vitest": "^4.0.17"
+  },
+  "dependencies": {
+    "express": "^5.2.1",
+    "zod": "^4.3.6"
   }
 }
