--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "CS4530 Template",
   "type": "module",
   "scripts": {
-    "check": "tsc",
+    "check": "npm-run-all check:*",
+    "check:frontend": "tsc -p frontend/tsconfig.json",
+    "check:server": "tsc",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "test": "vitest run --coverage",
-    "dev": "echo 'Run `npm run dev:server` and `npm run dev:frontend` separately",
+    "dev": "echo \"Run \\`npm run dev:server\\` and \\`npm run dev:frontend\\` separately\\n\"",
     "dev:frontend": "vite frontend",
     "dev:server": "node --watch ./src/server.ts",
     "build": "tsc -p frontend/tsconfig.json --noEmit && vite build frontend",
@@ -29,6 +31,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.26",
+    "npm-run-all2": "^8.0.4",
     "prettier": "^3.7.4",
     "supertest": "^7.2.2",
     "typescript": "^5.9.3",
