--- a/package.json
+++ b/package.json
@@ -4,19 +4,15 @@
   "description": "CS4530 Template",
   "type": "module",
   "scripts": {
-    "check": "npm-run-all check:*",
-    "check:frontend": "tsc -p frontend/tsconfig.json",
-    "check:server": "tsc",
+    "check": "tsc -p frontend/tsconfig.json",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --check .",
     "prettier:fix": "prettier --write .",
-    "test": "vitest run --coverage",
-    "dev": "echo \"Run \\`npm run dev:server\\` and \\`npm run dev:frontend\\` separately\\n\"",
-    "dev:frontend": "vite frontend",
-    "dev:server": "node --watch ./src/server.ts",
-    "build": "tsc -p frontend/tsconfig.json --noEmit && vite build frontend",
-    "start": "MODE=production node ./src/server.ts"
+    "test": "vitest run --config frontend/vite.config.mjs --coverage",
+    "dev": "vite frontend",
+    "build": "tsc -p frontend/tsconfig.json && vite build frontend",
+    "start": "vite preview frontend"
   },
   "author": "Rob Simmons",
   "devDependencies": {
@@ -24,7 +20,6 @@
     "@types/express": "^5.0.6",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
-    "@types/supertest": "^6.0.3",
     "@vitejs/plugin-react": "^5.1.2",
     "@vitest/coverage-istanbul": "^4.0.17",
     "eslint": "^9.39.2",
@@ -34,9 +29,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.26",
-    "npm-run-all2": "^8.0.4",
     "prettier": "^3.7.4",
-    "supertest": "^7.2.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.50.0",
     "vite": "^7.3.1",
