--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "^5.2.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "socket.io-client": "^4.8.3",
     "zod": "^4.3.6"
   }
 }
