--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -24,5 +24,5 @@
     "noImplicitReturns": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["."]
+  "include": [".", "../playwright.config.mjs"]
 }
