--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,9 @@ jobs:
           node-version: "24.x"
 
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm ci
+          npx playwright install
 
       - name: Typescript
         run: npm run check
