--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-  "printWidth": 60,
+  "printWidth": 100,
   "proseWrap": "always",
   "overrides": [{ "files": "*.md", "options": { "printWidth": 78 } }]
 }
+git 
